--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <% if current_user %>
+      <%= link_to current_user.email, edit_user_registration_path %>
+      <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+    <% else %>
+      <%= link_to_unless_current "Log in", new_user_session_path %>
+      <%= link_to_unless_current "Register", new_user_registration_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
