Set redirection to modules

--- a/app/views/key_results/index.html.erb
+++ b/app/views/key_results/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Key results</h1>
+<h1>Táctica</h1>
 
 <div id="key_results">
   <% @key_results.each do |key_result| %>
