--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Objectives</h1>
+<h1>Estrategía</h1>
 
 <div id="objectives">
   <% @objectives.each do |objective| %>
