--- a/app/views/initiatives/index.html.erb
+++ b/app/views/initiatives/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Initiatives</h1>
+<h1>Operación</h1>
 
 <div id="initiatives">
   <% @initiatives.each do |initiative| %>
