--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,54 +39,56 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
-            <!-- Nav Item - Pages Collapse Menu -->
+            <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Propósito</span>
-                </a>
+                <a class="nav-link" href="index.html">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Propósito</span></a>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Estrategía</span>
-                </a>
+              <%= link_to objectives_path, class: "nav-link"  do %>
+                <i class="fas fa-fw fa-tags"></i>
+                <span>Estrategía</span>
+              <%end%>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Táctica</span>
-                </a>
+              <%= link_to key_results_path, class: "nav-link"  do %>
+                <i class="fas fa-fw fa-tags"></i>
+                <span>Táctica</span>
+              <%end%>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Operación</span>
-                </a>
+              <%= link_to initiatives_path, class: "nav-link"  do %>
+                <i class="fas fa-fw fa-tags"></i>
+                <span>Operación</span>
+              <%end%>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Responsables</span>
-                </a>
+              <%= link_to owners_path, class: "nav-link"  do %>
+                <i class="fas fa-fw fa-tags"></i>
+                <span>Responsables</span>
+              <%end%>
             </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
-            
+
         </ul>
         <!-- End of Sidebar -->
 
@@ -113,7 +115,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Arturo Velázquez Dionicio</span>
                                 <%= image_tag "undraw_profile.svg", :class=>"img-profile rounded-circle" %>
                             </a>
                             <!-- Dropdown - User Information -->
