--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Responsables</h1>
+<h1>Owners</h1>
 
 <div id="owners">
   <% @owners.each do |owner| %>
