--- a/app/views/initiatives/new.html.erb
+++ b/app/views/initiatives/new.html.erb
@@ -1,9 +1,19 @@
-<h1>New initiative</h1>
-
-<%= render "form", initiative: @initiative %>
-
-<br>
-
-<div>
-  <%= link_to "Back to initiatives", initiatives_path %>
+<!--<h1>New initiative</h1>-->
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        New initiative
+      </div>
+      <div class="card-body">
+        <%= render "form", initiative: @initiative %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to initiatives", initiatives_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
