--- a/app/views/key_results/_form.html.erb
+++ b/app/views/key_results/_form.html.erb
@@ -11,57 +11,52 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class="row">
+    <div class="col-6">
+      <%= form.label :objective_id, style: "display: block" %>
+      <%= form.text_field :objective_id, class:"w-100" %>
+    </div>
+    <div class="col-6">
+      <%= form.label :period, style: "display: block" %>
+      <%= form.text_field :period %>
+    </div>
+    <div class="col-6">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name, class:"w-100" %>
+    </div>
+    <div class="col-6">
+      <%= form.label :owner_id, style: "display: block" %>
+      <%= form.text_field :owner_id, class:"w-100" %>
+    </div>
+    <div class="col-3">
+      <%= form.label :type_metric, style: "display: block" %>
+      <%= form.text_field :type_metric %>
+    </div>
+    <div class="col-3">
+      <%= form.label :strat_value, style: "display: block" %>
+      <%= form.text_field :strat_value %>
+    </div>
+    <div class="col-3">
+      <%= form.label :target, style: "display: block" %>
+      <%= form.text_field :target %>
+    </div>
+    <div class="col-3">
+      <%= form.label :current_value, style: "display: block" %>
+      <%= form.text_field :current_value %>
+    </div>
+    <div class="col-12">
+      <%= form.label :description, style: "display: block" %>
+      <%= form.text_area :description, class:"w-100" %>
+    </div>
+    <div class="col-9"></div>
+    <div class="col-3 text-right">
+      <%= form.submit %>
+    </div>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div>
-    <%= form.label :period, style: "display: block" %>
-    <%= form.text_field :period %>
-  </div>
-
-  <div>
-    <%= form.label :type_metric, style: "display: block" %>
-    <%= form.text_field :type_metric %>
-  </div>
-
-  <div>
-    <%= form.label :strat_value, style: "display: block" %>
-    <%= form.text_field :strat_value %>
-  </div>
-
-  <div>
-    <%= form.label :target, style: "display: block" %>
-    <%= form.text_field :target %>
-  </div>
-
-  <div>
-    <%= form.label :current_value, style: "display: block" %>
-    <%= form.text_field :current_value %>
-  </div>
-
-  <div>
+  <!--<div>
     <%= form.label :progress, style: "display: block" %>
     <%= form.text_field :progress %>
-  </div>
+  </div>-->
 
-  <div>
-    <%= form.label :objective_id, style: "display: block" %>
-    <%= form.text_field :objective_id %>
-  </div>
-
-  <div>
-    <%= form.label :owner_id, style: "display: block" %>
-    <%= form.text_field :owner_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
