--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -1,9 +1,20 @@
-<h1>New objective</h1>
+<!--<h1>New objective</h1>-->
 
-<%= render "form", objective: @objective %>
-
-<br>
-
-<div>
-  <%= link_to "Back to objectives", objectives_path %>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        New objective
+      </div>
+      <div class="card-body">
+        <%= render "form", objective: @objective %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to objectives", objectives_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
