--- a/app/views/owners/_form.html.erb
+++ b/app/views/owners/_form.html.erb
@@ -11,22 +11,23 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class="row">
+    <div class="col-12">
+      <%= form.label :user_id, style: "display: block" %>
+      <%= form.text_field :user_id, class:"w-100" %>
+    </div>
+    <div class="col-12">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name, class:"w-100" %>
+    </div>
+    <div class="col-12 text-right p-2">
+      <%= form.submit%>
+    </div>
   </div>
-
-  <div>
+  
+  <!--<div>
     <%= form.label :organization_id, style: "display: block" %>
     <%= form.text_field :organization_id %>
-  </div>
+  </div>-->
 
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
