--- a/app/views/owners/edit.html.erb
+++ b/app/views/owners/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing owner</h1>
-
-<%= render "form", owner: @owner %>
-
-<br>
-
-<div>
-  <%= link_to "Show this owner", @owner %> |
-  <%= link_to "Back to owners", owners_path %>
+<div class="row">
+  <div class="col-4"></div>
+  <div class="col-3">
+    <div class="card">
+      <div class="card-header">
+        <h4>Editing owner</h4>
+      </div>
+      <div class="card-body">
+        <%= render "form", owner: @owner %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to owners", owners_path %>
+    </div>
+  </div>
+  <div class="col-5"></div>
 </div>
