--- a/app/views/key_results/_form.html.erb
+++ b/app/views/key_results/_form.html.erb
@@ -14,43 +14,43 @@
   <div class="row">
     <div class="col-6">
       <%= form.label :objective_id, style: "display: block" %>
-      <%= form.text_field :objective_id, class:"w-100" %>
+      <%= form.text_field :objective_id, class:"form-control w-100" %>
     </div>
     <div class="col-6">
       <%= form.label :period, style: "display: block" %>
-      <%= form.text_field :period %>
+      <%= form.text_field :period, class:"form-control" %>
     </div>
     <div class="col-6">
       <%= form.label :name, style: "display: block" %>
-      <%= form.text_field :name, class:"w-100" %>
+      <%= form.text_field :name, class:"form-control w-100" %>
     </div>
     <div class="col-6">
       <%= form.label :owner_id, style: "display: block" %>
-      <%= form.text_field :owner_id, class:"w-100" %>
+      <%= form.text_field :owner_id, class:"form-control w-100" %>
     </div>
     <div class="col-3">
       <%= form.label :type_metric, style: "display: block" %>
-      <%= form.text_field :type_metric %>
+      <%= form.text_field :type_metric, class:"form-control" %>
     </div>
     <div class="col-3">
       <%= form.label :strat_value, style: "display: block" %>
-      <%= form.text_field :strat_value %>
+      <%= form.text_field :strat_value, class:"form-control" %>
     </div>
     <div class="col-3">
       <%= form.label :target, style: "display: block" %>
-      <%= form.text_field :target %>
+      <%= form.text_field :target, class:"form-control" %>
     </div>
     <div class="col-3">
       <%= form.label :current_value, style: "display: block" %>
-      <%= form.text_field :current_value %>
+      <%= form.text_field :current_value, class:"form-control" %>
     </div>
     <div class="col-12">
       <%= form.label :description, style: "display: block" %>
-      <%= form.text_area :description, class:"w-100" %>
+      <%= form.text_area :description, class:"form-control w-100" %>
     </div>
     <div class="col-9"></div>
-    <div class="col-3 text-right">
-      <%= form.submit %>
+    <div class="col-3 text-right p-2">
+      <%= form.submit nil, class:"btn btn-success" %>
     </div>
   </div>
 
