--- a/app/views/owners/_owner.html.erb
+++ b/app/views/owners/_owner.html.erb
@@ -1,17 +1,12 @@
 <div id="<%= dom_id owner %>">
-  <p>
-    <strong>Name:</strong>
-    <%= owner.name %>
-  </p>
-
-  <p>
-    <strong>Organization:</strong>
-    <%= owner.organization_id %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= owner.user_id %>
-  </p>
-
+  <div class="row">
+    <div class="col-12">
+      <%= label_tag "User" %>
+      <%= text_field_tag "user", @user.email, class:"form-control w-100" %>
+    </div>
+    <div class="col-12">
+      <%= label_tag "Name" %>
+      <%= text_field_tag "name", owner.name, class:"form-control w-100" %>
+    </div>
+  </div>
 </div>
