--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,10 +1,9 @@
-<!--<h1>New owner</h1>-->
 <div class="row">
   <div class="col-4"></div>
   <div class="col-3">
     <div class="card">
       <div class="card-header">
-        New owner
+        <h4>New owner</h4>
       </div>
       <div class="card-body">
         <%= render "form", owner: @owner %>
