--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,4 +1,24 @@
-<p style="color: green"><%= notice %></p>
+<div class="row">
+  <div class="col-4"></div>
+  <div class="col-3">
+    <div class="card">
+      <div class="card-header">
+        <h4>Show owner</h4>
+      </div>
+      <div class="card-body">
+        <%= render @owner %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to owners", owners_path %>
+    </div>
+  </div>
+  <div class="col-5"></div>
+</div>
+
+
+<!--<p style="color: green"><%= notice %></p>
 
 <%= render @owner %>
 
@@ -8,3 +28,4 @@
 
   <%= button_to "Destroy this owner", @owner, method: :delete %>
 </div>
+-->
