Complete purpose module

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <hr class="sidebar-divider">
 
             <li class="nav-item">
-              <%= link_to "organization", class: "nav-link"  do %>
+              <%= link_to organizations_path, class: "nav-link"  do %>
                 <i class="fas fa-fw fa-tags"></i>
                 <span>Purpose</span>
               <%end%>
