--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
             <li class="nav-item">
               <%= link_to organizations_path, class: "nav-link"  do %>
                 <i class="fas fa-fw fa-tags"></i>
-                <span>Purpose</span>
+                <span>Organization</span>
               <%end%>
             </li>
 
@@ -52,7 +52,7 @@
             <li class="nav-item">
               <%= link_to objectives_path, class: "nav-link"  do %>
                 <i class="fas fa-fw fa-tags"></i>
-                <span>Strategy</span>
+                <span>Objectives</span>
               <%end%>
             </li>
 
@@ -62,7 +62,7 @@
             <li class="nav-item">
               <%= link_to key_results_path, class: "nav-link"  do %>
                 <i class="fas fa-fw fa-tags"></i>
-                <span>Tactic</span>
+                <span>Key Results</span>
               <%end%>
             </li>
 
@@ -72,7 +72,7 @@
             <li class="nav-item">
               <%= link_to initiatives_path, class: "nav-link"  do %>
                 <i class="fas fa-fw fa-tags"></i>
-                <span>Operation</span>
+                <span>Initiatives</span>
               <%end%>
             </li>
 
