--- a/app/views/objectives/edit.html.erb
+++ b/app/views/objectives/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing objective</h1>
-
-<%= render "form", objective: @objective %>
-
-<br>
-
-<div>
-  <%= link_to "Show this objective", @objective %> |
-  <%= link_to "Back to objectives", objectives_path %>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <h4>Editing objective</h4>
+      </div>
+      <div class="card-body">
+        <%= render "form", objective: @objective %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to objectives", objectives_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
