--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-4"></div>
-  <div class="col-3">
+  <div class="col-4">
     <div class="card">
       <div class="card-header">
         <h4>Editing organization</h4>
@@ -11,8 +11,8 @@
     </div>
     <br>
     <div>
-      <%= link_to "Back to owners", owners_path %>
+      <%= link_to "Back to organization", organizations_path %>
     </div>
   </div>
-  <div class="col-5"></div>
+  <div class="col-4"></div>
 </div>
