--- a/app/views/key_results/new.html.erb
+++ b/app/views/key_results/new.html.erb
@@ -1,11 +1,9 @@
-<!--<h1>New key result</h1>-->
-
 <div class="row">
   <div class="col-3"></div>
   <div class="col-6">
     <div class="card">
       <div class="card-header">
-        New key result
+        <h4>New key result</h4>
       </div>
       <div class="card-body">
         <%= render "form", key_result: @key_result %>
