--- a/app/views/key_results/show.html.erb
+++ b/app/views/key_results/show.html.erb
@@ -1,10 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @key_result %>
-
-<div>
-  <%= link_to "Edit this key result", edit_key_result_path(@key_result) %> |
-  <%= link_to "Back to key results", key_results_path %>
-
-  <%= button_to "Destroy this key result", @key_result, method: :delete %>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <h4>Show key result</h4>
+      </div>
+      <div class="card-body">
+        <%= render @key_result %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to key results", key_results_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
