--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: objective) do |form| %>
   <% if objective.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(objective.errors.count, "error") %> prohibited this objective from being saved:</h2>
+    <div class="alert alert-danger" role="alert">
+      <p><%= pluralize(objective.errors.count, "error") %> prohibited this objective from being saved:</p>
 
       <ul>
         <% objective.errors.each do |error| %>
@@ -18,7 +18,7 @@
     </div>
     <div class="col-6">
       <%= form.label :owner_id, style: "display: block" %>
-      <%= form.text_field :owner_id, class:"form-control w-100" %>
+      <%= select_tag :owner_id, options_for_select(@options), class:"form-control"%>
     </div>
     <div class="col-12">
       <%= form.label :description, style: "display: block" %>
