--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -1,14 +1,41 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Estrategía</h1>
-
-<div id="objectives">
-  <% @objectives.each do |objective| %>
-    <%= render objective %>
-    <p>
-      <%= link_to "Show this objective", objective %>
-    </p>
-  <% end %>
+<div class="row">
+  <div class="col-2"></div>
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-10">
+            <h4>Objectives</h4>
+          </div>
+          <div class="col text-right">
+            <%= link_to "New", new_objective_path, class:"btn btn-success" %>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <% @objectives.each do |objective| %>
+          <div class="row p-2">
+            <div class="col-7">
+              <%= objective.name %>
+            </div>
+            <div class="col">
+              <%= objective.average_progress %>%
+            </div>
+            <div class="col text-right">
+              <%= button_to "Show", objective_path(objective.id), class:"btn btn-success", method: :get%>
+            </div>
+            <div class="col text-right">
+              <%= button_to "Update", edit_objective_path(objective.id), class:"btn btn-success", method: :get%>
+            </div>
+            <div class="col text-right">
+              <%= button_to "Delete", objective, class:"btn btn-success", method: :delete %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="col-2"></div>
 </div>
-
-<%= link_to "New objective", new_objective_path %>
