--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -1,11 +1,9 @@
-<!--<h1>New objective</h1>-->
-
 <div class="row">
   <div class="col-3"></div>
   <div class="col-6">
     <div class="card">
       <div class="card-header">
-        New objective
+        <h4>New objective</h4>
       </div>
       <div class="card-body">
         <%= render "form", objective: @objective %>
