--- a/app/views/objectives/show.html.erb
+++ b/app/views/objectives/show.html.erb
@@ -1,10 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @objective %>
-
-<div>
-  <%= link_to "Edit this objective", edit_objective_path(@objective) %> |
-  <%= link_to "Back to objectives", objectives_path %>
-
-  <%= button_to "Destroy this objective", @objective, method: :delete %>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <h4>Show objective</h4>
+      </div>
+      <div class="card-body">
+        <%= render @objective %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to objectives", objectives_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
