--- a/app/views/key_results/_form.html.erb
+++ b/app/views/key_results/_form.html.erb
@@ -21,6 +21,8 @@
       <%= form.text_field :period, class:"form-control" %>
     </div>
     <div class="col-3">
+      <%= form.label :progress, style: "display: block" %>
+      <%= form.text_field :progress, class:"form-control" %>
     </div>
     <div class="col-6">
       <%= form.label :name, style: "display: block" %>
@@ -35,8 +37,8 @@
       <%= form.text_field :type_metric, class:"form-control" %>
     </div>
     <div class="col-3">
-      <%= form.label :strat_value, style: "display: block" %>
-      <%= form.text_field :strat_value, class:"form-control" %>
+      <%= form.label :start_value, style: "display: block" %>
+      <%= form.text_field :start_value, class:"form-control" %>
     </div>
     <div class="col-3">
       <%= form.label :target, style: "display: block" %>
