--- a/app/views/key_results/_key_result.html.erb
+++ b/app/views/key_results/_key_result.html.erb
@@ -23,19 +23,19 @@
     </div>
     <div class="col-3">
       <%= label_tag "Type metric" %>
-      <%= text_field_tag "period", key_result.type_metric, class:"form-control", readonly: true %>
+      <%= text_field_tag "type_metric", key_result.type_metric, class:"form-control", readonly: true %>
     </div>
     <div class="col-3">
       <%= label_tag "Start value" %>
-      <%= text_field_tag "period", key_result.strat_value, class:"form-control", readonly: true %>
+      <%= text_field_tag "start_value", key_result.start_value, class:"form-control", readonly: true %>
     </div>
     <div class="col-3">
       <%= label_tag "Target" %>
-      <%= text_field_tag "period", key_result.target, class:"form-control", readonly: true %>
+      <%= text_field_tag "target", key_result.target, class:"form-control", readonly: true %>
     </div>
     <div class="col-3">
       <%= label_tag "Current value" %>
-      <%= text_field_tag "period", key_result.current_value, class:"form-control", readonly: true %>
+      <%= text_field_tag "current_value", key_result.current_value, class:"form-control", readonly: true %>
     </div>
     <div class="col-12">
       <%= label_tag "Description" %>
