--- a/app/views/key_results/index.html.erb
+++ b/app/views/key_results/index.html.erb
@@ -21,7 +21,7 @@
               <%= key_result.name %>
             </div>
             <div class="col">
-              <%= key_result.progress %>
+              <%= key_result.progress %>%
             </div>
             <div class="col text-right">
               <%= button_to "Show", key_result_path(key_result.id), class:"btn btn-success", method: :get%>
