--- a/app/views/owners/_owner.html.erb
+++ b/app/views/owners/_owner.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <%= label_tag "User" %>
-      
+      <%= text_field_tag "name", @user.email, class:"form-control w-100", readonly: true %>
     </div>
     <div class="col-12">
       <%= label_tag "Name" %>
