--- a/app/views/initiatives/edit.html.erb
+++ b/app/views/initiatives/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing initiative</h1>
-
-<%= render "form", initiative: @initiative %>
-
-<br>
-
-<div>
-  <%= link_to "Show this initiative", @initiative %> |
-  <%= link_to "Back to initiatives", initiatives_path %>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <h4>Editing initiative</h4>
+      </div>
+      <div class="card-body">
+        <%= render "form", initiative: @initiative %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to initiatives", initiatives_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
