--- a/app/views/initiatives/index.html.erb
+++ b/app/views/initiatives/index.html.erb
@@ -1,14 +1,41 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Operación</h1>
-
-<div id="initiatives">
-  <% @initiatives.each do |initiative| %>
-    <%= render initiative %>
-    <p>
-      <%= link_to "Show this initiative", initiative %>
-    </p>
-  <% end %>
+<div class="row">
+  <div class="col-2"></div>
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-10">
+            <h4>Initiatives</h4>
+          </div>
+          <div class="col text-right">
+            <%= link_to "New", new_initiative_path, class:"btn btn-success" %>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <% @initiatives.each do |initiative| %>
+          <div class="row p-2">
+            <div class="col-7">
+              <%= initiative.name %>
+            </div>
+            <div class="col">
+              <%= initiative.progress %>%
+            </div>
+            <div class="col text-right">
+              <%= button_to "Show", initiative_path(initiative.id), class:"btn btn-success", method: :get%>
+            </div>
+            <div class="col text-right">
+              <%= button_to "Update", edit_initiative_path(initiative.id), class:"btn btn-success", method: :get%>
+            </div>
+            <div class="col text-right">
+              <%= button_to "Delete", initiative, class:"btn btn-success", method: :delete %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div class="col-2"></div>
 </div>
-
-<%= link_to "New initiative", new_initiative_path %>
