--- a/app/views/initiatives/new.html.erb
+++ b/app/views/initiatives/new.html.erb
@@ -1,10 +1,9 @@
-<!--<h1>New initiative</h1>-->
 <div class="row">
   <div class="col-3"></div>
   <div class="col-6">
     <div class="card">
       <div class="card-header">
-        New initiative
+        <h4>New initiative</h4>
       </div>
       <div class="card-body">
         <%= render "form", initiative: @initiative %>
