--- a/app/views/initiatives/show.html.erb
+++ b/app/views/initiatives/show.html.erb
@@ -1,10 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @initiative %>
-
-<div>
-  <%= link_to "Edit this initiative", edit_initiative_path(@initiative) %> |
-  <%= link_to "Back to initiatives", initiatives_path %>
-
-  <%= button_to "Destroy this initiative", @initiative, method: :delete %>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <h4>Show initiative</h4>
+      </div>
+      <div class="card-body">
+        <%= render @initiative %>
+      </div>
+    </div>
+    <br>
+    <div>
+      <%= link_to "Back to initiatives", initiatives_path %>
+    </div>
+  </div>
+  <div class="col-3"></div>
 </div>
