--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -20,6 +20,11 @@
       <%= form.label :owner_id, style: "display: block" %>
       <%= select_tag :owner_id, options_for_select(@options), class:"form-control"%>
     </div>
+    <div class="col-3">
+      <%= form.label :average_progress, style: "display: block" %>
+      <%= form.text_field :average_progress, class:"form-control" %>
+    </div>
+    <div class="col-3"></div>
     <div class="col-12">
       <%= form.label :description, style: "display: block" %>
       <%= form.text_area :description, class:"form-control w-100" %>
@@ -29,15 +34,5 @@
       <%= form.submit nil, class:"btn btn-success" %>
     </div>
   </div>
-
-  <!--<div>
-    <%= form.label :average_progress, style: "display: block" %>
-    <%= form.text_field :average_progress %>
-  </div>-->
-
-  <!--<div>
-    <%= form.label :organization_id, style: "display: block" %>
-    <%= form.text_field :organization_id %>
-  </div>-->
 
 <% end %>
