--- a/app/views/owners/_form.html.erb
+++ b/app/views/owners/_form.html.erb
@@ -14,8 +14,7 @@
   <div class="row">
     <div class="col-12">
       <%= form.label :user_id, style: "display: block" %>
-      <!--<%= form.text_field :user_id, class:"w-100" %>-->
-      <%= select_tag :user_id, options_for_select(@options), class:"form-control"%>
+      <%= select_tag :user_id, options_for_select(@users), class:"form-control"%>
     </div>
     <div class="col-12">
       <%= form.label :name, style: "display: block" %>
