--- a/app/views/initiatives/new.html.erb
+++ b/app/views/initiatives/new.html.erb
@@ -3,7 +3,7 @@
   <div class="col-6">
     <div class="card">
       <div class="card-header">
-        <h4>New initiative</h4>
+        <h4 class="m-0 font-weight-bold text-primary">New initiative</h4>
       </div>
       <div class="card-body">
         <%= render "form", initiative: @initiative %>
