--- a/app/views/initiatives/show.html.erb
+++ b/app/views/initiatives/show.html.erb
@@ -5,7 +5,7 @@
   <div class="col-6">
     <div class="card">
       <div class="card-header">
-        <h4>Show initiative</h4>
+        <h4 class="m-0 font-weight-bold text-primary">Show initiative</h4>
       </div>
       <div class="card-body">
         <%= render @initiative %>
