--- a/app/views/key_results/edit.html.erb
+++ b/app/views/key_results/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="col-6">
     <div class="card">
       <div class="card-header">
-        <h4>Editing key result</h4>
+        <h4 class="m-0 font-weight-bold text-primary">Editing key result</h4>
       </div>
       <div class="card-body">
         <%= render "form", key_result: @key_result %>
