--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -5,7 +5,7 @@
   <div class="col-4">
     <div class="card">
       <div class="card-header">
-        <h4>Organization</h4>
+        <h4 class="m-0 font-weight-bold text-primary">Organization</h4>
       </div>
       <div class="card-body">
         <% @organizations.each do |organization| %>
