--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -7,7 +7,7 @@
       <div class="card-header">
         <div class="row">
           <div class="col-10">
-            <h4>Owners</h4>
+            <h4 class="m-0 font-weight-bold text-primary">Owners</h4>
           </div>
           <div class="col text-right">
             <%= link_to "New", new_owner_path, class:"btn btn-success" %>
