--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -3,7 +3,7 @@
   <div class="col-3">
     <div class="card">
       <div class="card-header">
-        <h4>New owner</h4>
+        <h4 class="m-0 font-weight-bold text-primary">New owner</h4>
       </div>
       <div class="card-body">
         <%= render "form", owner: @owner %>
